--- a/css/style.css
+++ b/css/style.css
@@ -1381,6 +1381,9 @@ form button:hover::after {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    border-radius: 0.25rem;
+    padding: 0.25rem 0;
+    background: linear-gradient(90deg, #15191e 10%, transparent 15%);
   }
   #nav .nav-list .links-container ul li a {
     transform: translateX(1.5rem);
@@ -1419,6 +1422,12 @@ form button:hover::after {
     background: #15191e;
     margin-right: 0.5em;
     border-radius: 0.25rem;
+  }
+  #nav .nav-list .links-container ul li .icon {
+    border-radius: 0.25rem;
+    margin: 0 1rem 0 0.5rem;
+    position: relative;
+    opacity: 0.7;
   }
   #nav .nav-list .links-container ul li:hover a {
     color: #b3c0cc;
