--- a/css/style.css
+++ b/css/style.css
@@ -1455,12 +1455,28 @@ form button:hover::after {
     font-size: 1rem;
     cursor: default;
     transition: 0.5s;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  #nav .nav-list .links-container .contact-links a .icon {
+    opacity: 0.7;
+  }
+  #nav .nav-list .links-container .contact-links a span {
+    height: 1rem;
+    border: 1px solid #b3c0cc;
   }
   #nav .nav-list .links-container .contact-links a i {
     margin-right: 0.25rem;
     padding-right: 0.25rem;
     width: 1.5rem;
     border-right: 1px solid #b3c0cc;
+  }
+  #nav .nav-list .links-container .contact-links a:hover .icon {
+    opacity: 1;
+  }
+  #nav .nav-list .links-container .contact-links a:hover span {
+    opacity: 0.7;
   }
   #nav .nav-list .links-container.active {
     left: 0;
