--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -217,12 +217,35 @@
                         font-size: 1rem;
                         cursor: default;
                         transition: .5s;
+                        display: flex;
+                        align-items: center;
+                        gap: 0.5rem;
 
+                        .icon {
+                            opacity: 0.7;
+                        }
+
+                        span {
+                            height: 1rem;
+                            border: 1px solid abstracts.$brand;
+                        }
+                        
                         i {
                             margin-right: .25rem;
                             padding-right: .25rem;
                             width: 1.5rem;
                             border-right: 1px solid abstracts.$brand;
+                        }
+
+
+                        &:hover {
+                            .icon {
+                                opacity: 1;
+                            }
+                            
+                            span {
+                                opacity: 0.7;
+                            }
                         }
                         
                     }
