--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -430,7 +430,7 @@
                     }
 
                     // SWITCH OFF DISPLAY OF ICONS USED IN SIDEBAR NAV
-                    i {
+                    i, .icon {
                         display: none;
                     }
 
