--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -177,7 +177,7 @@
                             border-radius: .25rem;
                             margin: 0 1rem 0 0.5rem;
                             position: relative;
-                            opacity: .5;
+                            // opacity: .5;
                         }
 
 
@@ -231,10 +231,6 @@
                         align-items: center;
                         gap: 0.5rem;
 
-                        .icon {
-                            opacity: 0.7;
-                        }
-
                         span {
                             height: 1rem;
                             border: 1px solid abstracts.$brand;
@@ -243,7 +239,6 @@
                         i {
                             margin-right: .25rem;
                             padding-right: .25rem;
-                            width: 1.5rem;
                             border-right: 1px solid abstracts.$brand;
                         }
 
