--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -136,6 +136,7 @@
                             width: 50%;
                             display: block;
                             font-size: 1rem;
+                            color: abstracts.$brand;
                             font-family: abstracts.$font-title;
                             text-transform: capitalize;
                             transition: .5s;
@@ -157,6 +158,7 @@
 
                             &.active {
                                 color: abstracts.$brand;
+                                color: abstracts.$text-light;
                             }
                         }
 
@@ -174,10 +176,10 @@
                         .icon {
                             // background: abstracts.$overlay-blue-darkest;
                             // margin-right: .5em;
-                            border-radius: .25rem;
+                            border-radius: 0.25rem;
                             margin: 0 1rem 0 0.5rem;
                             position: relative;
-                            // opacity: .5;
+                            opacity: 0.5;
                         }
 
 
@@ -242,6 +244,10 @@
                             border-right: 1px solid abstracts.$brand;
                         }
 
+                        .icon {
+                            opacity: 0.7;
+                        }
+
 
                         &:hover {
                             .icon {
@@ -249,7 +255,7 @@
                             }
                             
                             span {
-                                opacity: 0.7;
+                                opacity: 0.2;
                             }
                         }
                         
