--- a/css/style.css
+++ b/css/style.css
@@ -177,11 +177,13 @@ section .section-title.active-item span {
   position: fixed;
   bottom: 0;
   width: 100%;
+  border: 2px solid yellow;
   background: linear-gradient(0deg, #000, #15191e);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.25rem 5vw;
+  padding: 0.125rem 5vw;
+  height: 7vh;
   transform: translateY(15vh);
   transition: 1s;
 }
@@ -194,6 +196,7 @@ section .section-title.active-item span {
 .bottom-nav .link-item {
   width: 100%;
   height: 100%;
+  display: grid;
   border-radius: 1rem;
   opacity: 0;
   transition: 0.25s;
@@ -202,11 +205,9 @@ section .section-title.active-item span {
 }
 .bottom-nav .link-item a {
   color: #f4f4f4;
-  font-size: 0.75rem;
   display: grid;
   place-content: center;
   place-items: center;
-  padding: 0.5rem 2rem;
   border-radius: 1rem;
   cursor: default;
   position: relative;
@@ -234,6 +235,7 @@ section .section-title.active-item span {
 }
 .bottom-nav .link-item a .icon {
   opacity: 0.7;
+  width: 1.125rem;
 }
 .bottom-nav .link-item a:active {
   transition: 0.25s;
