--- a/sass/components/_bottom-nav.scss
+++ b/sass/components/_bottom-nav.scss
@@ -11,19 +11,21 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    border: 2px solid yellow;
     background: abstracts.$overlay-footer;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .25rem 5vw;
+    padding: .125rem 5vw;
+    height: 7vh;
     transform: translateY(15vh);
     transition: 1s;
 
     // BOTTOM NAV ITEM = FLEX ITEM[A LINK ICON]
     .link-item {
-        // border: 1px solid yellow;
         width: 100%;
         height: 100%;
+        display: grid;
         border-radius: 1rem;;
         opacity: 0;
         transition: .25s;
@@ -32,12 +34,12 @@
 
         a {
             color: abstracts.$text-light;
-            font-size: .75rem;
+            // font-size: .75rem;
 
             display: grid;
             place-content: center;
             place-items: center;
-            padding: .5rem 2rem;
+            // padding: .5rem 2rem;
 
             border-radius: 1rem;
             cursor: default;
@@ -70,6 +72,7 @@
 
             .icon {
                 opacity: 0.7;
+                width: 1.125rem;
             }
 
 
