--- a/sass/components/_bottom-nav.scss
+++ b/sass/components/_bottom-nav.scss
@@ -15,32 +15,31 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .125rem 5vw;
-    height: 7vh;
+    gap: 0.5rem;
+    padding: 0 5vw;
     transform: translateY(15vh);
     transition: 1s;
 
     // BOTTOM NAV ITEM = FLEX ITEM[A LINK ICON]
     .link-item {
+        position: relative;
+        display: grid;
         width: 100%;
         height: 100%;
-        display: grid;
-        border-radius: 1rem;;
         opacity: 0;
-        transition: .25s;
-        position: relative;
+        border-radius: 1rem;
         transform: translateY(1rem);
-
+        transition: .25s;
+        
         a {
             color: abstracts.$text-light;
-            // font-size: .75rem;
+            padding: 1rem 0;
 
             display: grid;
             place-content: center;
             place-items: center;
-            // padding: .5rem 2rem;
 
-            border-radius: 1rem;
+            border-radius: 2rem;
             cursor: default;
             position: relative;
             transition: .25s;
@@ -54,7 +53,7 @@
                 width: 100%;
                 height: 100%;
                 background: abstracts.$overlay-blue-dark;
-                border-radius: 1rem;
+                border-radius: inherit;
                 z-index: -1;
                 transition: .125s;
                 transform: scaleX(.5);
