--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -35,9 +35,9 @@
 .buttons-container {
     display: flex;
     justify-content: space-between;
-    padding: 2.5vh 5vw;
+    // padding: 2.5vh 5vw;
     gap: 1rem;
-    margin: 1.5rem 0 0;
+    margin: 1.5rem auto 0;
     @include abstracts.sm {
         justify-content: start;
         gap: 2rem;
