--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -77,12 +77,20 @@
                         }
 
                         p {
-                            margin: .5rem 0;
+                            margin: 0.5rem 0 1rem;
+                            font-size: 0.95rem;
+                            font-size: abstracts.$font-clamp-xsm;
+                            line-height: 1.5;
                         }
 
                         a {
                             // border: 2px solid red;
                             color: abstracts.$overlay-blue-light;
+                            font-size: 0.95rem;
+                            font-size: abstracts.$font-clamp-xsm;
+                            display: flex;
+                            align-items: center;
+                            gap: 0.5rem;
                             i {
                                 font-size: 1rem;
                                 margin-right: .5rem;
