--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -53,7 +53,7 @@
                         font-size: 1rem;
                         font-size: abstracts.$font-clamp-sm;
                     }
-                    i {
+                    i, img {
                         transform: translateY(-1rem) scale(1.1);
                         font-size: 2rem;
                         filter: drop-shadow(.25rem .25rem .25rem rgba(0, 0, 0, .1));
@@ -61,6 +61,10 @@
                         transition: .25s ease-in-out;
                     }
                     
+                    .icon {
+                        width: 2rem;
+                    }
+
                     &::after {
                         content: attr(data-info);
                         position: absolute;
@@ -81,7 +85,7 @@
                     }
 
                     .btn {
-                        i {
+                        i, .icon {
                             opacity: .5;
                             transition: .25s;
                         }
@@ -92,7 +96,7 @@
                 &:hover {
                     transform: scale(.99);
                     .title {
-                        i {
+                        i, .icon {
                             transform: translateY(0rem) scale(1);
                             filter: drop-shadow(.125rem .125rem .125rem rgba(0, 0, 0, .35));
                         }
@@ -104,12 +108,13 @@
 
                     .contact-info {
                         .btn {
-                            i {
+                            i, .icon {
                                 opacity: 1;
                             }
                         }
                     }
                 }
+                
             }
         }
 
