--- a/css/style.css
+++ b/css/style.css
@@ -1991,7 +1991,7 @@ form button:hover::after {
 }
 #projects .projects .all-projects .project-item .project-tile .project-info a {
   font-size: 0.85rem;
-  padding: 0.5rem;
+  padding: 0.75rem;
   margin: 1rem 0;
   border-radius: 0.5rem;
   font-weight: 500;
@@ -2003,6 +2003,9 @@ form button:hover::after {
 #projects .projects .all-projects .project-item .project-tile .project-info a i {
   font-size: 0.85rem;
   transition: 0.25s;
+  opacity: 0.6;
+}
+#projects .projects .all-projects .project-item .project-tile .project-info a .icon {
   opacity: 0.6;
 }
 #projects .projects .all-projects .project-item .project-img {
@@ -2076,7 +2079,7 @@ form button:hover::after {
 #projects .projects .all-projects .project-item:hover.project-item .project-img::after {
   opacity: 0.7;
 }
-#projects .projects .all-projects .project-item:hover.project-item .project-tile .project-info a i {
+#projects .projects .all-projects .project-item:hover.project-item .project-tile .project-info a i, #projects .projects .all-projects .project-item:hover.project-item .project-tile .project-info a .icon {
   opacity: 1;
   transform: translate(0) scale(1);
 }
