--- a/css/style.css
+++ b/css/style.css
@@ -1403,17 +1403,16 @@ form button:hover::after {
     overflow: hidden;
   }
   #nav .nav-list .links-container ul li {
-    opacity: 0;
     transition: 0.5s;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     border-bottom: 1px solid transparent;
     width: 100%;
-  }
-  #nav .nav-list .links-container ul li a {
     transform: translateX(1.5rem);
     opacity: 0;
+  }
+  #nav .nav-list .links-container ul li a {
     padding-bottom: 0.25rem;
     width: 70%;
     display: block;
@@ -1519,32 +1518,28 @@ form button:hover::after {
     transform: translateX(0);
   }
   #nav .nav-list .links-container.active ul li {
-    transition: 0.5s;
     opacity: 1;
-  }
-  #nav .nav-list .links-container.active ul li a {
     transform: translateX(0);
-    opacity: 1;
   }
-  #nav .nav-list .links-container.active ul li:nth-child(1) a {
+  #nav .nav-list .links-container.active ul li:nth-child(1) {
     transition-delay: 0.3s;
   }
-  #nav .nav-list .links-container.active ul li:nth-child(2) a {
+  #nav .nav-list .links-container.active ul li:nth-child(2) {
     transition-delay: 0.35s;
   }
-  #nav .nav-list .links-container.active ul li:nth-child(3) a {
+  #nav .nav-list .links-container.active ul li:nth-child(3) {
     transition-delay: 0.4s;
   }
-  #nav .nav-list .links-container.active ul li:nth-child(4) a {
+  #nav .nav-list .links-container.active ul li:nth-child(4) {
     transition-delay: 0.45s;
   }
-  #nav .nav-list .links-container.active ul li:nth-child(5) a {
+  #nav .nav-list .links-container.active ul li:nth-child(5) {
     transition-delay: 0.5s;
   }
-  #nav .nav-list .links-container.active ul li:nth-child(6) a {
+  #nav .nav-list .links-container.active ul li:nth-child(6) {
     transition-delay: 0.55s;
   }
-  #nav .nav-list .links-container.active ul li:nth-child(7) a {
+  #nav .nav-list .links-container.active ul li:nth-child(7) {
     transition-delay: 0.6s;
   }
   #nav .nav-list .links-container.active .contact-links a {
@@ -1663,9 +1658,6 @@ form button:hover::after {
   opacity: 1;
   transform: translateY(0);
   transition: 1s;
-}
-.header-io #nav .nav-list ul li {
-  opacity: 1;
 }
 .header-io.active-header #nav .logo {
   transform: translateY(0);
