--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -351,17 +351,14 @@
     .grid-subtitle {
         grid-area: grid-subtitle;
 
-        p {
-            line-height: 1.6;
-        }
-
         .btn {
             margin: 1rem 0 0;
             width: 10.5rem;
             width: clamp(10.5rem, 25vw, 12rem);
 
             .icon {
-                width: .95rem;
+                width: 0.95rem;
+                width: clamp(0.95rem, 2vw, 1rem);
             }
         }
     }
